# duckdb-vortex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  renovate.json  rust-toolchain.toml  vcpkg.json
.cargo/: config.toml
.github/workflows/: CherryPick.yml  ExtensionTemplate.yml  MainDistributionPipeline.yml
src/: vortex_extension.cpp  vortex_scan.cpp
src/include/: vortex_common.hpp  vortex_extension.hpp  vortex_rust.hpp
test/: CMakeLists.txt
test/sql/: nulls.test  sequence.test  table.test  table.test_slow  timestamp.test
vortex-extension/: Cargo.toml
