[package]
name = "vortex-extension"
description = "C-compatible Vortex DuckDB extension artifacts"
edition = "2024"
publish = false

[lib]
name = "vortex_duckdb"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
vortex-duckdb = { git = "https://github.com/vortex-data/vortex.git", rev = "890704f432c5b3267b4e7ceedfa9a2edf613bf42" }

# This improved build times significantly
[profile.dev.package.vortex-fastlanes]
debug = false
